--- a/home.html
+++ b/home.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Science Team</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" type="text/css" href="sci/styles.css">
+        <script src="aggarwal_assets/aggarwal_javascript/jquery-3.1.1.min.js"></script>
+        <script src="aggarwal_assets/aggarwal_javascript/script.js"></script>
   </head>
   <body>
-    blah
+
   </body>
 </html>
