--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Science Team</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet" type="text/css" href="sci/styles.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
         <script src="aggarwal_assets/aggarwal_javascript/jquery-3.1.1.min.js"></script>
         <script src="aggarwal_assets/aggarwal_javascript/script.js"></script>
   </head>
