--- a/home.html
+++ b/home.html
@@ -8,7 +8,11 @@
         <script src="aggarwal_assets/aggarwal_javascript/jquery-3.1.1.min.js"></script>
         <script src="aggarwal_assets/aggarwal_javascript/script.js"></script>
   </head>
-  <body>
+  <body id="no_scroll">
     blah
   </body>
+
+  <footer>
+    Copyright (c) 2016 Ashwin Aggarwal All Rights Reserved.  
+  </footer>
 </html>
