--- a/home.html
+++ b/home.html
@@ -8,11 +8,11 @@
         <script src="aggarwal_assets/aggarwal_javascript/jquery-3.1.1.min.js"></script>
         <script src="aggarwal_assets/aggarwal_javascript/script.js"></script>
   </head>
+  <header>
+    <h1>Science Team</h1>
+  </header>
   <body id="no_scroll">
     blah
   </body>
 
-  <footer>
-    Copyright (c) 2016 Ashwin Aggarwal All Rights Reserved.  
-  </footer>
 </html>
