--- a/home.html
+++ b/home.html
@@ -12,7 +12,14 @@
     <h1>Science Team</h1>
   </header>
   <body id="no_scroll">
-    blah
+    <div id="sidebar">
+      <ul>
+        <li>Home</li>
+        <li>ISO</li>
+        <li>WYSE</li>
+        <li>JETS</li>
+      </ul>
+    </div>
   </body>
 
 </html>
