--- a/home.html
+++ b/home.html
@@ -12,14 +12,19 @@
     <h1>Science Team</h1>
   </header>
   <body id="no_scroll">
-    <div id="sidebar">
-      <ul>
-        <li>Home</li>
-        <li>ISO</li>
-        <li>WYSE</li>
-        <li>JETS</li>
-      </ul>
+    <div class="page_content">
+
+
+      <div id="sidebar">
+        <ul>
+          <li>Home</li>
+          <li>ISO</li>
+          <li>WYSE</li>
+          <li>JETS</li>
+        </ul>
+      </div>
     </div>
+
   </body>
 
 </html>
