--- a/home.html
+++ b/home.html
@@ -12,19 +12,21 @@
     <h1>Science Team</h1>
   </header>
   <body id="no_scroll">
-    <div class="page_content">
+    <div class="wrapper">
+      <a href="" class="toggle">≡</a>
+      <div class="page_content">
 
 
-      <div id="sidebar">
-        <ul>
-          <li>Home</li>
-          <li>ISO</li>
-          <li>WYSE</li>
-          <li>JETS</li>
-        </ul>
+        <div id="sidebar">
+          <ul>
+            <li>Home</li>
+            <li>ISO</li>
+            <li>WYSE</li>
+            <li>JETS</li>
+          </ul>
+        </div>
       </div>
-    </div>
-
+  </div>
   </body>
 
 </html>
