--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
   </header>
   <body id="no_scroll">
     <div class="wrapper">
-      <a href="" class="toggle">≡</a>
+      <a href="home.html" class="toggle">≡</a>
       <div class="page_content">
 
 
