--- a/home.html
+++ b/home.html
@@ -12,8 +12,10 @@
     <h1>Science Team</h1>
   </header>
   <body id="no_scroll">
+    <input type="checkbox" id="side_toggle" name="" value=""></input>
+
     <div class="wrapper">
-      <a href="home.html" class="toggle">≡</a>
+      <label for="side_toggle" class="toggle">≡</label>
       <div class="page_content">
 
 
