--- a/home.html
+++ b/home.html
@@ -8,27 +8,17 @@
         <script src="aggarwal_assets/aggarwal_javascript/jquery-3.1.1.min.js"></script>
         <script src="aggarwal_assets/aggarwal_javascript/script.js"></script>
   </head>
-  <header>
-    <h1>Science Team</h1>
-  </header>
-  <body id="no_scroll">
 
-    <div class="wrapper">
-      <input type="checkbox" id="side_toggle" name="" value=""></input>
-      <label for="side_toggle" class="toggle">≡</label>
-      <div class="page_content">
-
-
-        <div id="sidebar">
-          <ul>
-            <li>Home</li>
-            <li>ISO</li>
-            <li>WYSE</li>
-            <li>JETS</li>
-          </ul>
-        </div>
+  <body id="menu">
+    <header>
+      <h1>Science Team</h1>
+      <a href="#" class="menu_toggle">tog</a>
+      <div>
+        blah blah
       </div>
-  </div>
+    </header>
+
+
   </body>
 
 </html>
