--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <header>
       <h1>Science Team</h1>
       <a href="#" class="menu_toggle">tog</a>
-      <div>
+      <div class="menu-side">
         blah blah
       </div>
     </header>
