--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
         <script src="aggarwal_assets/aggarwal_javascript/script.js"></script>
   </head>
 
-  <body id="menu">
+  <body class="menu menu-open">
     <header>
       <h1>Science Team</h1>
       <a href="#" class="menu_toggle">tog</a>
