--- a/home.html
+++ b/home.html
@@ -5,8 +5,8 @@
     <title>Science Team</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" type="text/css" href="styles.css">
-        <script src="aggarwal_assets/aggarwal_javascript/jquery-3.1.1.min.js"></script>
-        <script src="aggarwal_assets/aggarwal_javascript/script.js"></script>
+        <script src="jquery-3.1.1.min.js"></script>
+        <script src="script.js"></script>
   </head>
 
   <body class="menu menu-open">
