--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     <script>
       (function() {
           var body = $('body');
-          $('.menu-toggle').bind('click', function(){
+          $('.menu_toggle').bind('click', function(){
               body.toggleClass('menu-open');
           });
         })();
