--- a/home.html
+++ b/home.html
@@ -11,8 +11,8 @@
 
   <body class="menu menu-open">
     <header>
+      <a href="#" class="menu_toggle">≡</a>
       <h1>Science Team</h1>
-      <a href="#" class="menu_toggle">tog</a>
       <div class="menu-side">
         blah blah
       </div>
