--- a/home.html
+++ b/home.html
@@ -14,7 +14,13 @@
       <a href="#" class="menu_toggle">≡</a>
       <h1>Science Team</h1>
       <div class="menu-side">
-        blah blah
+        <ul>
+          <li>Home</li>
+          <li>ISO</li>
+          <li>WYSE</li>
+          <li>JETS</li>
+          <li>Envirotho</li>
+        </ul>
       </div>
     </header>
     <script>
