--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
           <li>ISO</li>
           <li>WYSE</li>
           <li>JETS</li>
-          <li>Envirotho</li>
+          <li>Envirothon</li>
         </ul>
       </div>
     </header>
