--- a/home.html
+++ b/home.html
@@ -15,11 +15,11 @@
       <h1>Science Team</h1>
       <div class="menu-side">
         <ul>
-          <li>Home</li>
-          <li>ISO</li>
-          <li>WYSE</li>
-          <li>JETS</li>
-          <li>Envirothon</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">ISO</a></li>
+          <li><a href="#">WYSE</a></li>
+          <li><a href="#">JETS</a></li>
+          <li><a href="#">Envirothon</a></li>
         </ul>
       </div>
     </header>
