--- a/home.html
+++ b/home.html
@@ -10,8 +10,8 @@
 
   <body class="menu menu-open">
     <header>
-      <a href="#" class="menu_toggle">≡</a>
-      <h1>Science Team</h1>
+      <a href="#" class="menu_toggle">≡</a><h1>Science Team</h1>
+
       <div class="menu-side">
         <ul>
           <li><a href="#">Home</a></li>
