--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
         <script src="jquery-3.1.1.min.js"></script>
   </head>
 
-  <body class="menu menu-open">
+  <body class="menu">
     <header>
       <a href="#" class="menu_toggle">≡</a><h1>Science Team</h1>
 
