messing with fonts

--- a/home.html
+++ b/home.html
@@ -10,7 +10,8 @@
 
   <body class="menu">
     <header>
-      <a href="#" class="menu_toggle">≡</a><h1>Science Team</h1>
+      <a href="#" class="menu_toggle">≡</a>
+      <h1>Science Team</h1>
 
       <div class="menu-side">
         <ul>
@@ -22,6 +23,11 @@
         </ul>
       </div>
     </header>
+
+    <div class="middle">
+      
+    </div>
+
     <script>
       (function() {
           var body = $('body');
