messing with fonts

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
   <body class="menu">
     <header>
       <a href="#" class="menu_toggle">≡</a>
-      <h1>Science Team</h1>
+      <h1>Latest News</h1>
 
       <div class="menu-side">
         <ul>
@@ -27,6 +27,7 @@
     <div class="middle">
       <div class="article">
         <h1>Example Header</h1>
+        <h3>Caption</h3>
         <p>content</p>
       </div>
 
