--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Science Team</title>
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Oswald" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" type="text/css" href="styles.css">
         <script src="jquery-3.1.1.min.js"></script>
