--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 
   <body class="menu">
     <header>
-      <a href="#" class="menu_toggle">≡</a>
+      <a href="#" class="menu_toggle"><i class="material-icons" style="font-size: 48px;">reorder</i></a>
       <h1>Latest News</h1>
 
       <div class="menu-side">
