--- a/home.html
+++ b/home.html
@@ -27,9 +27,9 @@
 
     <div class="middle">
       <div class="article">
-        <h1>Example Header</h1>
-        <h3>Caption</h3>
-        <p>content</p>
+        <h1>New Beginnings</h1>
+        <h3>by Ashwin Aggarwal on 11.12.16</h3>
+        <p>Welcome to the new Science Team website!</p>
       </div>
 
     </div>
