--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
   <body class="menu">
     <header>
       <a href="#" class="menu_toggle"><i class="material-icons" style="font-size: 48px;">reorder</i></a>
-      <h1>Latest News</h1>
+      <h1>Recent News</h1>
 
       <div class="menu-side">
         <ul>
@@ -28,7 +28,7 @@
     <div class="middle">
       <div class="article">
         <h1>New Beginnings</h1>
-        <h3>by Ashwin Aggarwal on 11.12.16</h3>
+        <h5>by Ashwin Aggarwal on 11.12.16</h5>
         <p>Welcome to the new Science Team website!</p>
       </div>
 
