--- a/home.html
+++ b/home.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Science Team</title>
+            <!-- Chrome, Firefox OS, Opera and Vivaldi -->
+        <meta name="theme-color" content="lightgreen">
+        <!-- Windows Phone -->
+        <meta name="msapplication-navbutton-color" content="lightgreen">
+        <!-- iOS Safari -->
+        <meta name="apple-mobile-web-app-status-bar-style" content="lightgreen">
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Oswald" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" type="text/css" href="styles.css">
@@ -11,7 +17,7 @@
 
   <body class="menu">
     <header>
-      <a href="#" class="menu_toggle"><i class="material-icons" style="font-size: 48px;">reorder</i></a>
+      <a href="#" class="menu_toggle"><i class="material-icons" style="font-size: 48px;">menu</i></a>
       <h1>Recent News</h1>
 
       <div class="menu-side">
@@ -28,7 +34,7 @@
     <div class="middle">
       <div class="article">
         <h1>New Beginnings</h1>
-        <h5>by Ashwin Aggarwal on 11.12.16</h5>
+        <h5>by Ashwin Aggarwal (11/12/16)</h5>
         <p>Welcome to the new Science Team website!</p>
       </div>
 
