--- a/home.html
+++ b/home.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>Science Team</title>
             <!-- Chrome, Firefox OS, Opera and Vivaldi -->
-        <meta name="theme-color" content="lightgreen">
+        <meta name="theme-color" content="#66CD00">
         <!-- Windows Phone -->
-        <meta name="msapplication-navbutton-color" content="lightgreen">
+        <meta name="msapplication-navbutton-color" content="#66CD00">
         <!-- iOS Safari -->
-        <meta name="apple-mobile-web-app-status-bar-style" content="lightgreen">
+        <meta name="apple-mobile-web-app-status-bar-style" content="#66CD00">
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Oswald" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" type="text/css" href="styles.css">
