--- a/home.html
+++ b/home.html
@@ -36,6 +36,10 @@
       </div>
     </header>
 
+    <!-- <div class="tab">
+
+    </div> -->
+
     <div class="middle">
       <div class="article">
         <h1>New Beginnings</h1>
