--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 
     <header>
       <a href="#" class="menu_toggle"><i class="material-icons" style="font-size: 48px;">menu</i></a>
-      <h1>Recent News</h1>
+      <!-- <h1>Recent News</h1> -->
 
       <div class="menu-side">
         <ul>
